cargo-features = ["edition2024"]

[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.5.1"
clap = { version = "4.5.39", features = ["derive"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
lalrpop-util = { version = "0.22.2", features = ["lexer"] }

[build-dependencies]
lalrpop = { version = "0.22.2", features = ["lexer"] }
